--- a/index.html
+++ b/index.html
@@ -32,12 +32,15 @@ h1,h2,h3,h4,h5,h6,body {font-family: "Roboto", sans-serif}
 <div class="w3-padding-large" id="main">
   <!-- Header/Home -->
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
-    <h1 class="w3-jumbo"><span class="w3-hide-small"><b>I'm</b></span><b> Rafay Khan. </b></h1>
+    <h1 class="w3-jumbo"><span class="w3-hide-small"><b>I'm</b></span><b> Rafay Khan </b></h1>
     <p>Engineering Masters Graduate | AI Enthusiast | UX Designer</p>
-    <br>
-    <img src="https://i.imgur.com/WJGX5xd.png" alt="boy" class="w3-image" width="300" height="1000">
   </header>
-
+  
+	<br>
+    <div class="w3-center">
+    <img src="https://i.imgur.com/WJGX5xd.png" alt="boy" class="w3-image" width="300" height="1000">
+    </div>
+    
   <!-- About Section -->
   <div class="w3-content w3-justify w3-text-light-grey w3-padding-64" id="about">
     <h2 class="w3-text-light-grey">Hi There!</h2>
