--- a/index.html
+++ b/index.html
@@ -22,19 +22,14 @@ h1,h2,h3,h4,h5,h6,body {font-family: "Roboto", sans-serif}
 </style>
 <body class="w3-black">
 
-<!-- Icon Bar (Sidebar - hidden on small screens) -->
-<nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
-  <!-- Avatar image in top left corner -->
-  <img src="https://i.imgur.com/n6YvZfJ.png" style="width:100%">
-</nav>
 
 <!-- Page Content -->
 <div class="w3-padding-large" id="main">
   <!-- Header/Home -->
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
+  	<img src="https://i.imgur.com/n6YvZfJ.png" style="width:3%">
     <h1 class="w3-jumbo"><span class="w3-hide-small"><b>I'm</b></span><b> Rafay Khan </b></h1>
     <p>Engineering Masters Graduate | AI Enthusiast | UX Designer</p>
-
   </header>
   
 	<br>
@@ -82,7 +77,7 @@ h1,h2,h3,h4,h5,h6,body {font-family: "Roboto", sans-serif}
         <i class="fa fa-youtube" title="YouTube"></i>
     </a>
     
-    
+    </div>
   </div>
    
 </div>
