--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
 <style>
 h1,h2,h3,h4,h5,h6,body {font-family: "Roboto", sans-serif}
 .w3-row-padding img {margin-bottom: 12px}
-/* Set the width of the sidebar to 120px */
-.w3-sidebar {width: 120px;background: #000000;}
 
 /* Remove margins from "page content" on small screens */
 @media only screen and (max-width: 600px) {#main {margin-left: 0}}
@@ -32,6 +30,7 @@ h1,h2,h3,h4,h5,h6,body {font-family: "Roboto", sans-serif}
   
   <br>
   <div class="w3-center">
+  	<img src="https://i.imgur.com/n6YvZfJ.png" style="width:100%" class="w3-image">
     <img src="https://i.imgur.com/WJGX5xd.png" alt="Profile Picture" class="w3-image" width="300" height="1000">
    </div>
     
