--- a/index.html
+++ b/index.html
@@ -52,19 +52,16 @@ h1,h2,h3,h4,h5,h6,body {font-family: "Roboto", sans-serif}
   <!-- Contact Section -->
   <div class="w3-content w3-justify w3-text-light-grey w3-padding-64" id="contact">
     <h3 class="w3-text-light-grey">You can find me here</h3>
-    <p>Check out some of my work on GitHub or press the briefcase icon for my UX Designs.</p>
+    <p>Check out some of my work on GitHub or contact me</p>
     <div>      	
     <a target="_blank" href="https://github.com/raf3khan" type="button" style="border:2px solid white" class="w3-circle w3-hover-white w3-padding w3-section w3-xlarge">
         <i class="fa fa-github" title="GitHub"></i>
     </a>
-    <a target="_blank" href="https://rafekhan.wixsite.com/home/designs" type="button" style="border:2px solid white" class="w3-circle w3-hover-white w3-padding w3-section w3-xlarge">
-        <i class="fa fa-briefcase" title="UX Designs"></i>
-    </a>
     <a target="_blank" href="https://linkedin.com/in/rafekhan" type="button" style="border:2px solid white" class="w3-circle w3-hover-white w3-padding w3-section w3-xlarge">
         <i class="fa fa-linkedin" title="LinkedIn"></i>
     </a>
-    <a target="_blank" href="https://youtube.com/rafekhan" type="button" style="border:2px solid white" class="w3-circle w3-hover-white w3-padding w3-section w3-xlarge">
-        <i class="fa fa-youtube" title="YouTube"></i>
+    <a target="_blank" href="https://instagram.com/raf.khn" type="button" style="border:2px solid white" class="w3-circle w3-hover-white w3-padding w3-section w3-xlarge">
+        <i class="fa fa-instagram" title="Instagram"></i>
     </a>
     <p> If you like what you see shoot me a text!<br>I'm best contactable by <a target="_blank" href="mailto:rafek@outlook.com">email</a> or via <a target="_blank" href="https://linkedin.com/in/rafekhan">LinkedIn</a></p>
     </div>
