--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ h1,h2,h3,h4,h5,h6,body {font-family: "Roboto", sans-serif}
 @media only screen and (max-width: 600px) {#main {margin-left: 0}}
 </style>
 <body class="w3-black">
-
+<script id="5ffb18633d80cc436ab1512e" src="https://dashboard.chatfuel.com/integration/fb-entry-point.js" async defer></script>
 
 <!-- Page Content -->
 <div class="w3-padding-large" id="main">
